--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,364 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.background1 {
+  background-image: url("../public/task\ tracker\ background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  opacity: 0.5;
+}
+
+.background2 {
+  background-color: rgb(0, 0, 0);
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  opacity: 0;
+}
+
+.outer-container {
+  position: relative;
+}
+
+/* Header */
+header {
+  text-align: center;
+  border-bottom: 2px solid rgb(187, 187, 187);
+  padding: 1rem;
+}
+
+header h2 {
+  margin: 0;
+  color: rgb(41, 41, 41);
+}
+
+header h2:hover {
+  color: grey;
+}
+/* TaskForm */
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid #ff3fa4;
+  padding: 0.5rem;
+  border-radius: 0.8rem;
+  margin-bottom: 1rem;
+}
+
+input {
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+}
+
+/* RatingSelect */
+.ratings {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 0;
+}
+
+.ratings li,
+.num-display {
+  position: relative;
+  background: #f4f4f4;
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 10px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 19px;
+  border: 1px #eee solid;
+  transition: 0.3s;
+}
+
+.ratings li label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 10px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
+.ratings li:hover,
+.num-display {
+  background: #ff3fa4;
+  color: #fff;
+}
+
+[type="radio"] {
+  opacity: 0;
+}
+
+[type="radio"]:checked ~ label {
+  background: #ff3fa4;
+  color: #fff;
+}
+
+/* Button */
+.btn {
+  width: 20%;
+  min-width: 120px;
+  max-width: 150px;
+  padding: 1rem;
+  border: none;
+  cursor: pointer;
+  border-radius: 0.8rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn-primary {
+  color: white;
+  background-color: #ff3fa4;
+}
+
+.btn-primary:hover {
+  background-color: rgb(26, 188, 26);
+}
+
+.btn-secondary {
+  color: white;
+  background-color: black;
+}
+
+.btn-secondary:hover {
+  background-color: rgb(74, 74, 74);
+}
+
+.disabled {
+  color: rgb(191, 191, 191);
+  background-color: rgb(239, 239, 239);
+}
+
+.disabled:hover {
+  color: rgb(191, 191, 191);
+  background-color: rgb(239, 239, 239);
+}
+
+/* TaskStats */
+.stats {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.task-priority {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.high {
+  color: red;
+}
+.moderate {
+  color: green;
+}
+.low {
+  color: orange;
+}
+
+/* TaskList */
+.container {
+  width: 80%;
+  margin: 3rem auto 0rem;
+  height: 100vh;
+}
+
+.task-list {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+/* Card */
+.card {
+  background-color: white;
+  opacity: 0.9;
+  padding: 1rem 2rem 1rem 2rem;
+  display: flex;
+  position: relative;
+  border-radius: 1rem;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+/* ListItem */
+.rating {
+  position: absolute;
+  top: -20px;
+  left: -15px;
+  color: white;
+  background-color: #ff3fa4;
+  border: 2px solid white;
+  padding: 1rem;
+  border-radius: 100%;
+  z-index: 1;
+}
+
+.task {
+  padding: 2rem 0rem 2rem 2rem;
+  font-size: 1.2rem;
+}
+
+.buttons {
+  width: 20%;
+  min-width: 200px;
+  display: flex;
+}
+
+.edit {
+  cursor: pointer;
+  width: 100%;
+  font-size: 2rem;
+  color: rgb(147, 147, 147);
+  background-color: white;
+  border: none;
+  border-left: 1px solid rgb(191, 191, 191);
+  transition: all 0.5s ease-in-out;
+}
+
+.edit:hover .icon {
+  transform: scale(1.2);
+  transition: all 0.2s ease-in-out;
+  color: white;
+}
+
+.edit:hover {
+  background-color: rgb(6, 143, 255);
+}
+
+.close {
+  cursor: pointer;
+  width: 100%;
+  font-size: 2rem;
+  color: rgb(147, 147, 147);
+  background-color: white;
+  border: none;
+  border-left: 1px solid rgb(191, 191, 191);
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  transition: all 0.5s ease-in-out;
+}
+
+.icon {
+  transition: all 0.5s ease-in-out;
+}
+
+.close:hover .icon {
+  transform: scale(1.2);
+  transition: all 0.2s ease-in-out;
+  color: white;
+}
+
+.close:hover {
+  background-color: red;
+}
+
+/* AboutIcon */
+.about {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.about-icon {
+  color: rgb(121, 121, 121);
+}
+
+.about-icon:hover {
+  color: #ff3fa4;
+}
+
+@media screen and (max-width: 860px) {
+  .background1 {
+    background-size: contain;
+  }
+  .container {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 750px) {
+  .container {
+    width: 95%;
+  }
+
+  .card {
+    padding: 0;
+  }
+
+  .task {
+    padding: 0.5rem 0;
+    font-size: 1.2rem;
+    margin: 0;
+  }
+
+  .rating {
+    padding: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .buttons {
+    min-width: 100px;
+  }
+  .stats {
+    flex-direction: column;
+  }
+  .input {
+    padding: 0.2;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  /* RatingSelect */
+  .ratings {
+    gap: 0.5rem;
+  }
+
+  .ratings li,
+  .num-display {
+    width: 1rem;
+    height: 1rem;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 19px;
+    font-weight: bold;
+    border: 1px #eee solid;
+    transition: 0.3s;
+  }
+
+  .ratings li label {
+    top: 50%;
+    left: 50%;
+    width: 1rem;
+    height: 1.2rem;
+    padding: 10px;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
